--- a/src/components/Day/Day.css
+++ b/src/components/Day/Day.css
@@ -1,6 +1,6 @@
 .day {
   color: #2F4F4F;
-  min-width: 500px;
+  /* min-width: 500px; */
   padding: 20px 20px 45px 40px;
   display: flex;
   border-bottom: 1px solid whitesmoke;
@@ -124,7 +124,7 @@
   padding-left: 20px;
 }
 
-.day::before,
+/* .day::before,
 .day::after {
   content: '';
   position: absolute;
@@ -139,11 +139,9 @@
 
 .day::after {
   left: 100%;
-}
-
-/* .day:hover {
-  background-color: red;
 } */
+
+/* ──────────────────────────────────────────────────────────────────────────────── */
 
 .day .note:hover {
   background-color: whitesmoke;
@@ -152,13 +150,14 @@
 .note {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: start;
   justify-content: space-between;
   transition: all 0.2s linear;
   border-radius: 4px;
   padding-left: 4px;
   padding-right: 4px;
   font-size: 14px;
+  padding: 4px;
 }
 
 .note:hover {
@@ -182,4 +181,9 @@
   opacity: 1;
   transition: all 0.2s linear;
   color: rgb(207, 80, 76);
+}
+
+.day li {
+  max-width: 500px;
+  word-wrap: break-word;
 }
