--- a/src/components/Inbox/Inbox.css
+++ b/src/components/Inbox/Inbox.css
@@ -56,7 +56,7 @@
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(104, 140, 255, 0.6);
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1200px) {
   .inbox {
     display: none;
   }
