--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -5,8 +5,6 @@
   justify-content: space-between;
   transition: all 0.2s linear;
   border-radius: 4px;
-  padding-left: 4px;
-  padding-right: 4px;
   padding: 4px;
 }
 
